[tool.poetry]
name = "ainomamani_test"
version = "0.1.0"
description = ""
authors = ["kzk23 <kzkgoat23@gmai.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
django = "^3.1.1"
djangorestframework = "^3.11.1"
djangorestframework-simplejwt = "^4.4.0"
django-environ = "^0.4.5"
django-cors-headers = "^3.5.0"
django-allauth = "^0.42.0"
django-rest-auth = "^0.9.5"
djangorestframework-jwt = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
